--- a/6-2/index.html
+++ b/6-2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>5-03_cookie</title>
+    <title>6-03_ドロワー</title>
     <link href="../_common/images/favicon.ico" rel="shortcut icon" />
     <link
       href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500"
